Add button and its style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h2 class="heading">Day 2 </h2>
     <p>Hello World</p>
+
+     <div>
+        <button class="btn">
+            Click me
+        </button>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
