Add new feature section and update JS functionality-abdelmonemmarei

--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
 <body>
     <h2 class="heading">Day 2 </h2>
     <p>Hello World</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    <div>
+        <h2>Abdelmonem Marei | Form</h2>
+        <form id="form" action="submit">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Doe"><br><br>
+            <input type="submit" value="Submit">
+          </form>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
